# Razor-StudyDeadliner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: file_manager.h  subject.h  subjects_controller.h  task.h  ui.h  ui_controller.h
include/subject/: subject.h
include/task/: task.h
include/ui/: ui.h  ui_controller.h
resources/: user_tasks.json
src/: file_manager.cpp  main.cpp  subject.cpp  subjects_controller.cpp  task.cpp
src/subject/: subject.cpp
src/task/: task.cpp
src/ui/: ui.cpp  ui_controller.cpp
